fix: fixed horizontal scroll on screens <992px

--- a/css/style.css
+++ b/css/style.css
@@ -1446,6 +1446,10 @@ textarea {
   color: inherit;
 }
 
+.rights__fb:hover {
+  color: red;
+}
+
 .modal {
   visibility: hidden;
 }
