--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -139,3 +139,7 @@
   &__link
     text-decoration: none
     color: inherit
+
+  &__fb
+    &:hover
+      color: red
